audio z-index fixed

--- a/styles/biography.css
+++ b/styles/biography.css
@@ -10,6 +10,7 @@ audio {
     position: fixed;
     top: 20px;
     right: 35px;
+    z-index: 1001;
 }
 
 ul {
